midnight.css
/* change colors */
.theme-dark {
    --brand-experiment: hsl(220, 60%, 60%);

    --header-primary: hsl(220, 15%, 60%);
    --header-secondary: hsl(220, 15%, 40%);
    --text-normal: var(--header-primary);
    --text-muted: hsl(220, 15%, 20%);
    --text-link: hsl(197, 100%, 47.8%);
    --text-link-low-saturation: /* hsl(197, 100%, 52.9%) */ var(--text-link);
    --text-positive: hsl(139, 66.8%, 58.6%);
    --text-warning: hsl(38, 95.7%, 54.1%);
    --text-danger: hsl(359, 82.6%, 59.4%);
    --text-brand: hsl(235, 86.1%, 77.5%);
    --interactive-normal: var(--header-secondary);
    --interactive-hover: var(--header-primary);
    --interactive-active: var(--header-primary);
    --interactive-muted: var(--text-muted);
    --background-primary: hsl(220, 15%, 10%);
    --background-secondary: hsl(220, 15%, 13%);
    --background-secondary-alt: hsl(220, 15%, 13%);
    --background-tertiary: hsl(220, 15%, 13%);
    --background-accent: hsl(220, 15%, 16%);
    --background-floating: hsl(220, 15%, 8%);
    --background-mobile-primary: var(--background-primary);
    --background-mobile-secondary: var(--background-secondary);
    --background-modifier-hover: hsla(220, 15%, 20%, .1);
    --background-modifier-active: hsla(220, 15%, 20%, .2);
    --background-modifier-selected: hsla(220, 15%, 20%, .3);
    --background-modifier-accent: hsla(220, 15%, 20%, .3);
    --info-positive-text: hsl(0, 0%, 100%);
    --info-warning-text: hsl(0, 0%, 100%);
    --info-danger-text: hsl(0, 0%, 100%);
    --info-help-background: hsla(197, 100%, 47.8%, 0.1);
    --info-help-foreground: hsl(197, 100%, 47.8%);
    --info-help-text: hsl(0, 0%, 100%);
    --status-warning-text: hsl(0, 0%, 0%);
    --scrollbar-thin-thumb: hsl(220, 15%, 12%);
    --scrollbar-thin-track: transparent;
    --scrollbar-auto-thumb: hsl(220, 15%, 12%);
    --scrollbar-auto-track: transparent;
    --scrollbar-auto-scrollbar-color-thumb: hsl(220, 15%, 12%);
    --scrollbar-auto-scrollbar-color-track: transparent;
    --elevation-stroke: 0 0 0 1px hsla(240, 11%, 2%, 0.15);
    --elevation-low: none;
    --elevation-medium: 0 4px 4px hsla(0, 0%, 0%, 0.16);
    --elevation-high: 0 8px 10px hsla(0, 0%, 0%, 0.24);
    --logo-primary: hsl(0, 0%, 100%);
    --control-brand-foreground: hsl(235, 86.1%, 77.5%);
    --control-brand-foreground-new: hsl(235, 86.1%, 77.5%);
    --background-mentioned: /* hsla(38, 95.7%, 54.1%, 0.1)*/ hsla(220, 60%, 60%, 0.10);
    --background-mentioned-hover: /*hsla(38, 95.7%, 54.1%, 0.08)*/ hsla(220, 60%, 60%, 0.08);
    --background-message-hover: var(--background-modifier-hover);
    --channels-default: var(--header-secondary);
    --guild-header-text-shadow: 0 1px 1px rgba(0, 0, 0, 0.4);
    --channeltextarea-background: var(--background-tertiary);
    --activity-card-background: var(--background-tertiary);
    --textbox-markdown-syntax: var(--header-secondary);

    --info-positive-background: hsla(139,calc(var(--saturation-factor, 1)*47.3%),43.9%,0.1);
    --info-positive-foreground: hsl(139,calc(var(--saturation-factor, 1)*47.3%),43.9%);
    --info-warning-background: hsla(38,calc(var(--saturation-factor, 1)*95.7%),54.1%,0.1);
    --info-warning-foreground: /* hsl(38,calc(var(--saturation-factor, 1)*95.7%),54.1%)*/ hsl(220, 60%, 60%);
    --info-danger-background: hsla(359,calc(var(--saturation-factor, 1)*82.6%),59.4%,0.1);
    --info-danger-foreground: hsl(359,calc(var(--saturation-factor, 1)*82.6%),59.4%);
    --status-positive-background: hsl(139,calc(var(--saturation-factor, 1)*47.3%),43.9%);
    --status-positive-text: #fff;
    --status-warning-background: hsl(38,calc(var(--saturation-factor, 1)*95.7%),54.1%);
    --status-danger-background: hsl(359,calc(var(--saturation-factor, 1)*82.6%),59.4%);
    --status-danger-text: #fff;
    --focus-primary: hsl(197,calc(var(--saturation-factor, 1)*100%),47.8%);
}

/* force elements to use colors variables */
.peopleColumn-29fq28,
.uploadModal-2ifh8j,
.pageWrapper-1PgVDX,
.message-2qRu38,
.root-1gCeng,
.container-3ayLPN {
    background-color: var(--background-primary) !important;
}

.expandedFolderIconWrapper-Huv7rA svg {
    color: var(--brand-experiment) !important;
}

.folderIconWrapper-1_bOZe,
.expandedFolderBackground-1cujaW {
    background-color: var(--background-primary) !important;
}

.lookFilled-1Gx00P.colorGrey-2DXtkV {
    background-color: var(--background-accent) !important;
}

.focused-2bY0OD {
    background-color: var(--background-tertiary) !important;
}

.queryContainer-RKFJW- {
    color: var(--text-normal) !important;
    border-bottom: none !important;
}

.dim-1l4L4y span {
    background-color: var(--text-muted) !important;
    color: var(--header-secondary) !important;
    border: none;
}

.option-96V44q .filter-3Y_im-,
.searchOption-zQ-1l6 .answer-1n6g43 {
    color: var(--header-secondary) !important;
}

.theme-dark .resultsGroup-r_nuzN .header-2N-gMV, 
.theme-dark .resultsGroup-r_nuzN .plusIcon-v0BTrL, 
.theme-dark .resultsGroup-r_nuzN .searchClearHistory-2cSSMO, 
.theme-dark .resultsGroup-r_nuzN .searchLearnMore-3SQUAj a {
    color: var(--header-primary) !important;
}

.option-96V44q .answer-1n6g43, 
.option-96V44q .nonText-3CRkO0, 
.theme-dark .option-96V44q strong {
    color: var(--text-normal) !important;
}


/* adjust colors for chat and sidebars */
.sidebarRegionScroller-3MXcoP,
.scroller-1JbKMe,
.privateChannels-1nO12o,
.panels-j1Uci_,
.sidebar-2K8pFh,
.container-3w7J-x,
.members-1998pB, 
.members-1998pB > div {
    background: var(--background-primary) !important;
}

.footer-3mqk7D,
.footer-2gL1pp {
    background-color: var(--background-secondary) !important;
}


/* remove weird shadow on search suggestions */
.option-96V44q:after {
    background: none !important;
}

/* fix activity cards */
.itemCard-v9viV7 {
    border: none;
}

.outer-1AjyKL.active-1xchHY, 
.outer-1AjyKL.interactive-3B9GmY:hover {
    background-color: var(--background-modifier-hover) !important;
}


/* add rounded borders */
.callContainer-36WRfH,
.notice-3bPHh-,
.threadSidebar-1o3BTy,
.container-1D34oG,
.container-1a3EgQ,
.applicationStore-1pNvnv,
.sidebar-2K8pFh,
.pageWrapper-1PgVDX {
    border-radius: 10px !important;
}

/* add margins around edges */
.container-1D34oG,
.container-1a3EgQ,
.applicationStore-1pNvnv,
.chat-3bRxxu,
.pageWrapper-1PgVDX {
    margin: 10px;
}

.threadSidebar-1o3BTy { 
    margin: 10px 10px 10px 0px;
}

.notice-3bPHh- {
    margin: 10px 10px 0px 0px;
}

.sidebar-2K8pFh {
    margin: 10px 0px 10px 0px;
}

.wrapper-3NnKdC {
    margin: 10px 0px 0px 0px;
}

/* remove chat background */
.chat-3bRxxu {
    background: none !important;
}

/* remove title bar background */
.title-3qD0b- {
    background: none !important;
    width: auto;
}

/* add chat background and make rounded */
.chatContent-a9vAAp {
    background: var(--background-primary) !important;
    border-radius: 0px 0px 10px 10px;
}

/* add background to title bar and make rounded */
.chatContent-a9vAAp::before {
    content: "";
    position: relative;
    margin-top: -48px;
    background: var(--background-primary);
    width: 100%;
    height: 48px;
    border-radius: 10px 10px 0px 0px;
}

/* put thread join/archive banner on top */
.chatHeaderBar-4vZS1x {
    z-index: 1;
}

/* put toolbar on top */
.toolbar-1t6TWx {
    position: relative;
    z-index: 1;
}

/* hide toolbar icons */
.iconWrapper-2OrFZ1[aria-label="Help"] {
    display: none;
}

.iconWrapper-2OrFZ1[aria-label*="Member List"] {
    display: none;
}

/* position search */
.search-36MZv- {
    order: 1;
    margin-left: 36px;
    margin-right: 8px;
}

.searchBar-3dMhjb {
    width: 208px !important;
    padding: 0px 2px;
}

/* position members list and add margins/rounded */
.membersWrap-2h-GB4 {
    position: relative;
    margin-top: -48px;
}

.members-1998pB {
    border-radius: 10px !important;
    margin: 0px 0px 0px 10px;
}

/* create space for search bar */
.members-1998pB div h2:first-of-type {
    margin-top: 30px;
}

/* add search bar background */
.members-1998pB::before {
    z-index: 1;
    content: "";
    position: fixed;
    background: var(--background-primary);
    width: 240px;
    height: 48px;
    border-radius: 10px 10px 0px 0px;
}

.searchResultsWrap-3-pOjs {
    width: 430px;
}


/* other */
button[type="button"]:focus {
    transform: scale(0.95);
}


/* only show scrollbar when hover */
.scrollerBase-289Jih::-webkit-scrollbar:hover {
    visibility: visible;
}

.scrollerBase-289Jih::-webkit-scrollbar {
    visibility: hidden;
}


/* window controls */
.typeWindows-1za-n7 + .app-1q1i1E .container-2lgZY8 {
    padding-top: 10px;
}

.scroller-1Bvpku {
    padding: 0;
}

.typeWindows-1za-n7 {
    height: 0px;
    margin: 0;
    background: none;
}

.wordmarkWindows-1v0lYD {
    padding: 2px 9px;
}

.typeWindows-1za-n7 .winButton-iRh8-Z > svg {
    display: none;
}

.typeWindows-1za-n7 .winButton-iRh8-Z {
    background: none;
    top: 0;
    width: 10px;
    height: 10px;
    margin: 4px 12px 0px 0px;
}

.typeWindows-1za-n7 .winButton-iRh8-Z:nth-child(2) {
    margin-right: 10px;
}

.typeWindows-1za-n7 .winButton-iRh8-Z::after {
    content: "";
    height: 10px;
    width: 10px;
    border-radius: 12px;
    transition: 0.1s;
}

.typeWindows-1za-n7 .winButtonClose-1HsbF-::after {
    background-color: hsl(0, 50%, 50%) !important;
}

.typeWindows-1za-n7 .winButtonMinMax-PBQ2gm:nth-child(3)::after {
    background-color: hsl(120, 50%, 50%) !important;
}

.typeWindows-1za-n7 .winButtonMinMax-PBQ2gm:nth-child(4)::after {
    background-color: hsl(50, 50%, 50%) !important;
}

.typeWindows-1za-n7 > div:hover::after {
    transform: scale(1.1);
}

